chore: Update .gitignore to protect sensitive files and migrations
- Add .env.production to ignored files
- Add /prisma/migrations/ to ignored files (already applied to database)
- Ensure all environment variables are protected
- Update Prisma schema metadata

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+.env.production
 
 # vercel
 .vercel
@@ -37,3 +38,6 @@ yarn-error.log*
 next-env.d.ts
 
 /lib/generated/prisma
+
+# prisma migrations (already applied to database)
+/prisma/migrations/
